# src/modules/merchants/dto/update-merchant-staff.dto.ts
@@ -1,0 +1,7 @@
+import { IsEnum } from 'class-validator';
+import { MerchantStaffRole } from '../../../tenancy/merchant-staff-role.enum.js';
+
+export class UpdateMerchantStaffDto {
+  @IsEnum(MerchantStaffRole)
+  role!: MerchantStaffRole;
+}
